# Buzz

./: .gitignore  README.md
ANDROID_APP/: README.md  settings.gradle
ANDROID_APP/app/: build.gradle
ANDROID_APP/app/debug/: app-debug.aab
ANDROID_APP/app/release/: app-release.aab
ANDROID_APP/app/src/main/: AndroidManifest.xml
ANDROID_APP/app/src/main/res/drawable/: button.xml  buzz_icon_foreground.xml  codeinput0.xml  codeinput1.xml  green_circle.xml  ic_group_5.xml  ic_launcher_foreground.xml  progess_drawable.xml  seekbar_thumb.xml
ANDROID_APP/app/src/main/res/layout/: activity_base.xml  activity_code_input.xml  activity_landing_page.xml  activity_main.xml  activity_timer.xml  content_landing_page.xml
ANDROID_APP/app/src/main/res/menu/: bar.xml
ANDROID_APP/app/src/main/res/mipmap-anydpi-v26/: buzz_icon.xml  buzz_icon_round.xml
ANDROID_APP/app/src/main/res/values/: buzz_icon_background.xml  ic_launcher_background.xml  strings.xml  themes.xml
ANDROID_APP/gradle/wrapper/: gradle-wrapper.properties
BACK_END/: Cargo.toml  notifications.json  rocket.toml
BACK_END/src/: main.rs
FRONT_END/: package.json
WEB_APP/back_end/: Dockerfile  README.md  app.py  requirements.txt  static
WEB_APP/front_end/: README.md  package-lock.json  package.json
WEB_APP/front_end/public/: index.html  manifest.json
WEB_APP/front_end/src/: App.css  App.js
app/src/main/res/layout/: settings_activity.xml
app/src/main/res/menu/: bar.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
