[package]
name = "BACK_END"
version = "0.1.0"
authors = ["ReedKrawiec <reedkrawiec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = { version = "1.9.0", features = ["full"] }
tokio-tungstenite = "*"
notify-rust = "4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"